operator/src/main/resources/init/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"bookinfo2:latest","namespace":"bschmeli-tmp3"},"fieldPath":"spec.template.spec.containers[?(@.name==\"bookinfo2\")].image","pause":"false"}]
  name: bookinfo2
  labels:
    app: bookinfo2
    app.kubernetes.io/component: bookinfo2
    app.kubernetes.io/instance: bookinfo2
    app.kubernetes.io/name: bookinfo2
    app.openshift.io/runtime: bookinfo2
    app.openshift.io/runtime-namespace: bschmeli-tmp3
    app.openshift.io/runtime-version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bookinfo2
        deployment: bookinfo2
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: bookinfo2
          image: >-
            image-registry.openshift-image-registry.svc:5000/bschmeli-tmp3/bookinfo2@sha256:d7713759323ff35ecf435d4557c3654d89483dd3c45c8b59e3933df1d0b64ee5
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
